# rpg_game

./: Cargo.toml  README.md  crates.js  help.html  rustfmt.toml  search-index.js  settings.html  source-files.js
.github/workflows/: benches.yml  coverage.yml  rust_doc.yml
rpg_game/: all.html  index.html
src/: basic.rs  lib.rs  main.rs  player.rs  utils.rs
src/entity/: mod.rs
src/global/: config.rs  mod.rs
src/interface/: combat.rs  main_menu.rs  map.rs  mod.rs
src/object/: mod.rs
src/rpg_game/: lib.rs.html
src/rpg_game/test/: mod.rs.html  version_number.rs.html
