[package]
name = "rpg_game"
version = "0.0.0"
authors = ["Aliénore Bouttefeux <alienore.bouttefeux@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/ABouttefeux/rpg_game"
categories = ["Games", "Game engines"]
description = "A small rpg game"
keywords = ["RPG", "Game"]
license = "MIT OR Apache-2.0"

[features]
serde-serialize = ["serde"]
default = ["serde-serialize"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
crossbeam = "0.8.2"
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"], optional = true }
console = "0.15.5"
dialoguer = "0.10.4"
indicatif = {version = "0.17.3", features = ["rayon", "improved_unicode"]}
atty = "0.2.14"

[dev-dependencies]
criterion = "0.5.1"
version-sync = "0.9.4"

[[bench]]
name = "bench"
harness = false